--- a/week-1.html
+++ b/week-1.html
@@ -5,8 +5,7 @@
 	<style type=“text/css”>
 	.head{
 	background-color:#ffc0cb;color:white;font-weight:bold;font-size:30px
-	text-align:center;padding:10px;
-}
+	text-align:center;padding:10px;}
 	</style>
 <body>
 	<div class=“head”>Wedding Invitation</div>
