--- a/week-1.html
+++ b/week-1.html
@@ -1,12 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset=“utf-8”></meta>
-	<title>Wedding Invitation</title>
+	<title>吳冠Wedding Invitation</title>
 	<style type=“text/css”>
 	.head{
-	background-color:#ffc0cb;color:white;font-weight:bold;font-size:30px
-	text-align:center;padding:10px;}
+	background-color:#ffc0cb;color:white;font-weight:bold;font-size:30px;
+	text-align:center;padding:10px;
+}
 	</style>
+</head>
 <body>
 	<div class=“head”>Wedding Invitation</div>
 </body>
