--- a/week-1.html
+++ b/week-1.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset=“utf-8”></meta>
-	<title>吳冠Wedding Invitation</title>
-	<style type=“text/css”>
-	.head{
-	background-color:#ffc0cb;color:white;font-weight:bold;font-size:30px;
-	text-align:center;padding:10px;
-}
-	</style>
-</head>
-<body>
-	<div class=“head”>Wedding Invitation</div>
+  <div style="font-size:20px;">Wedding Website</div>
+	
+  
+ <body>
+	
+<meta charset=“utf-8”></meta>
+	<div style="	background-color:#ffc0cb;color:white;font-weight:bold;font-size:40px;
+	text-align:center;padding:300px;"
+        <div> Kurt&Ann's Wedding Invitation</div>
 </body>
-</html>
+</html> 
