--- a/week-1.html
+++ b/week-1.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <div style="font-size:20px;">Wedding Website</div>
-	
-  
- <body>
-	
-<meta charset=“utf-8”></meta>
-	<div style="	background-color:#ffc0cb;color:white;font-weight:bold;font-size:40px;
-	text-align:center;padding:300px;"
-        <div> Kurt&Ann's Wedding Invitation</div>
-</body>
-</html> 
+  <head>  
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Wedding Website</title>
+    <link rel="stylesheet"type="text/css"href=layout.css/>
+</div>
+  <div class="wrap">
+    <div class="header clearfix">
+      <div class="logo">
+        <a>My Website</a>
+      </div>
+      <div class="menu clearfix">
+        <a href="#" class="showmenu"><img src=bars-solid.svg width=20px></a>
+          <ul class="menu-list clearfix">
+            <li><a>item1</a></li>
+            <li><a>item2</a></li>
+            <li><a>item3</a></li>
+            <li><a>item4</a></li>
+</div>
+  <div class="welcome">
+    <div class="middle">Kurt&Ann's Wedding Invitation
+</div>
+</div>
+  </head>
+  <body>
+  <main>
+    <div class="comtainer">
+      <div class=img>
+        <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>交通資訊</div>
+    </div>
+    <div class="comtainer">
+        <div class=img>
+          <img src="IMG_88181.jpg"width=280px/></div>
+        <div class=text>時間表</div>
+    </div>
+    <div class="comtainer">
+      <div class=img>
+          <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>防疫DRESS CODE</div>
+    </div>
+    <div class="comtainer">
+      <div class=img>
+        <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>餐點介紹</div>
+    </div>
+    <div class="comtainer">
+      <div class=img>
+        <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>男方親友座位表</div>
+    </div>
+    <div class="comtainer">
+      <div class=img>
+        <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>女方親友座位表</div>
+    </div>
+    <div class="comtainer">
+      <div class=img>
+        <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>聯絡我們</div>
+    </div>  
+    <div class="comtainer">
+      <div class=img>
+        <img src="IMG_88181.jpg"width=280px/></div>
+      <div class=text>音樂歌單</div>
+    </div>
+  </main>
+  </body>
+</html
