--- a/week-1.html
+++ b/week-1.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Wedding Website</title>
-    <link rel="stylesheet"type="text/css"href=layout.css/>
+    <link rel="stylesheet"type="text/css"href=https://github.com/anntechcm/wehelp-assignments/blob/4b2674840c0e53254933c4779e4d1a54dd8a36ed/layout.css/>
 </div>
   <div class="wrap">
     <div class="header clearfix">
