--- a/newweek1.html
+++ b/newweek1.html
@@ -75,6 +75,7 @@
 .middle{
     font-weight:bold;font-size:40px;
     text-align:center;padding:300px;
+    max-width:600px;
 }
 main{
     display:flex;flex-wrap: wrap;
