--- a/wed.html
+++ b/wed.html
@@ -168,13 +168,13 @@ main{
       <div class=img>
         <img src="user-tie-solid.svg"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
-        onmouseout="javascript:this.style.color='black'" onclick="location.href='menu.html'">男方親友座位表</div>
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='groom.html'">男方親友座位表</div>
     </div>
     <div class="comtainer">
       <div class=img>
         <img src="dress.png" width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
-        onmouseout="javascript:this.style.color='black'" onclick="location.href='menu.html'">女方親友座位表</div>
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='bride.html'">女方親友座位表</div>
     </div>
     <div class="comtainer">
       <div class=img>
@@ -190,4 +190,4 @@ main{
     </div>
   </main>
   </body>
-</html
+	    </html>
