--- a/wed.html
+++ b/wed.html
@@ -180,7 +180,7 @@ main{
       <div class=img>
         <img src="contact-mail.png"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
-        onmouseout="javascript:this.style.color='black'" onclick="location.href='menu.html'">聯絡我們</div>
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='contactus.html'">聯絡我們</div>
     </div>  
     <div class="comtainer">
       <div class=img>
