--- a/wed.html
+++ b/wed.html
@@ -123,7 +123,7 @@ main{
   <div class="wrap">
     <div class="header clearfix">
       <div class="logo">
-        <a>Wedding Website</a>
+        <a>Kurt&Ann's Wedding Website</a>
       </div>
       <div class="menu clearfix">
         <a href="#" class="showmenu"><img src=bars-solid.svg width=20px></a>
