--- a/location.html
+++ b/location.html
@@ -6,6 +6,7 @@
     <title>Location</title>
     <link rel="stylesheet"type="text/css"href=layout.css/>
 </div>
+<div style=float:left;font size:20px;>停車建議停紅毛城停車場(P3)，車位較多，步行至嘉廬約三分鐘。</div>
 <div class=img style=float:left;>
     <img src="IMG_0919.JPG"/></div>
 </div>
