--- a/contactus.html
+++ b/contactus.html
@@ -14,14 +14,13 @@
 }
 </style>
 <div class="contact">
-    <div >新郎</div>
+    <div >新郎 KURT 吳冠輝</div>
     <div >Email:kurt8246gmail.com   </div>
 </br>
-    <div >新娘</div>
+    <div >新娘 ANN  李雨璇</div>
     <div >Email:u104030078@cmu.edu.tw</div>
     <div >LINE:gloria66tw </div>
 
 </html>
 
        
-        
