--- a/wed.html
+++ b/wed.html
@@ -76,6 +76,7 @@
     font-weight:bold;font-size:30px;
     text-align:center;padding:300px;
     max-width:600px;
+	
 }
 main{
     display:flex;flex-wrap: wrap;
@@ -134,8 +135,8 @@ main{
             <li><a>item4</a></li>
 </div>
 <div class="welcome">
-<div class="middle">Kurt&Ann's Wedding Invitation
-</div>
+<div class="middle">
+        <img src="HUA_3459.JPG"width=800px/></div>
 </div>
   </head>
   <body>
