--- a/wed.html
+++ b/wed.html
@@ -73,8 +73,9 @@
     background-color:#ffc0cb;color:white; margin-bottom: 20px;
 }
 .middle{
-    font-weight:bold;font-size:30px;
-    text-align:center;padding:300px;
+    display:flex;align-items:center;
+	justify-content:center;
+	padding:300px;
     max-width:600px;
 	
 }
