--- a/wed.html
+++ b/wed.html
@@ -73,8 +73,8 @@
     background-color:#ffc0cb;color:white; margin-bottom: 20px;
 }
 .middle{
-    display:flex;align-items:center;
-	justify-content:center;
+    display:flex;align-items:left;
+	justify-content:left;
 	padding:300px;
     max-width:600px;
 	
