--- a/wed.html
+++ b/wed.html
@@ -142,13 +142,15 @@ main{
   <body>
   <main>
     <div class="comtainer">
-      <div class=img>
+      <div class=img style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='location.html'">
         <img src="car-solid.svg"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='location.html'">交通資訊</div>
     </div>
     <div class="comtainer">
-        <div class=img>
+        <div class=img style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='timeline.html'">
           <img src="calendar-alt-regular.svg"width=250px height=250px/></div>
           <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='timeline.html'">時間表</div>
