--- a/wed.html
+++ b/wed.html
@@ -156,37 +156,43 @@ main{
         onmouseout="javascript:this.style.color='black'" onclick="location.href='timeline.html'">時間表</div>
     </div>
     <div class="comtainer">
-      <div class=img>
+      <div class=img  style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='dresscode.html'">
           <img src="bullhorn-solid.svg"width=250px height=250px/></div>
           <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='dresscode.html'">防疫DRESS CODE</div>
     </div>
     <div class="comtainer">
-      <div class=img>
+      <div class=img  style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='menu.html'">
         <img src="glass-cheers-solid.svg"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='menu.html'">餐點介紹</div>
     </div>
     <div class="comtainer">
-      <div class=img>
+      <div class=img style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='groom.html'">
         <img src="user-tie-solid.svg"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='groom.html'">男方親友座位表</div>
     </div>
     <div class="comtainer">
-      <div class=img>
+      <div class=img  style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='bride.html'">
         <img src="dress.png" width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='bride.html'">女方親友座位表</div>
     </div>
     <div class="comtainer">
-      <div class=img>
+      <div class=img  style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='contactus.html'">
         <img src="contact-mail.png"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='contactus.html'">聯絡我們</div>
     </div>  
     <div class="comtainer">
-      <div class=img>
+      <div class=img  style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='songlist.html'">
         <img src="music-note.png"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
         onmouseout="javascript:this.style.color='black'" onclick="location.href='songlist.html'">音樂歌單</div>
