--- a/location.html
+++ b/location.html
@@ -10,6 +10,7 @@
   .img{
     height: auto;
 max-width: 100%;
+    display: flex;
   }
 </style>
 <div style=float:left;font size:20px;>停車建議停紅毛城停車場(P3)，車位較多，步行至嘉廬約三分鐘。</div>
