--- a/wed.html
+++ b/wed.html
@@ -188,7 +188,7 @@ main{
         onmouseout="javascript:this.style.color='black'" onclick="location.href='contactus.html'">
         <img src="contact-mail.png"width=250px height=250px/></div>
         <div class=text style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
-        onmouseout="javascript:this.style.color='black'" onclick="location.href='contactus.html'">聯絡我們</div>
+        onmouseout="javascript:this.style.color='black'" onclick="location.href='contactus.html'">即時訊息</div>
     </div>  
     <div class="comtainer">
       <div class=img  style:style= cursor:hand " onmouseover="javascript:this.style.color='#4bc2c5'" 
