--- a/contactus.html
+++ b/contactus.html
@@ -14,12 +14,14 @@
 }
 </style>
 <div class="contact">
+     <div >2022.1.9 更新 活動照常舉行</div>
+  </br>
     <div >新郎 KURT 吳冠輝</div>
     <div >Email:kurt8246gmail.com   </div>
 </br>
     <div >新娘 ANN  李雨璇</div>
     <div >Email:u104030078@cmu.edu.tw</div>
-    <div >LINE:gloria66tw </div>
+    <div >0988927052 </div>
 
 </html>
 
