--- a/contactus.html
+++ b/contactus.html
@@ -16,6 +16,7 @@
 <div class="contact">
      <div >2022.1.9 更新 活動照常舉行</div>
   </br>
+    <div >聯絡我們</div>
     <div >新郎 KURT 吳冠輝</div>
     <div >Email:kurt8246gmail.com   </div>
       <div >0933119943</div>
