--- a/contactus.html
+++ b/contactus.html
@@ -17,15 +17,13 @@
      <div >2022.1.11 更新 活動照常舉行</div>
   </br>
     <div >聯絡我們</div>
-    <div >新郎 KURT 吳冠輝</div>
-    <div >Email:kurt8246gmail.com   </div>
-      <div >0933119943</div>
+    <div >新郎 KURT </div>
+
 
 
 </br>
-    <div >新娘 ANN  李雨璇</div>
-    <div >Email:u104030078@cmu.edu.tw</div>
-    <div >0988927052 </div>
+    <div >新娘 ANN </div>
+
 
 </html>
 
